# emms

./: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile  Makefile.am  NEWS  README  RELEASE  THANKGNU  TODO  configure.ac  emms-auto.el  emms-auto.in  emms-bookmarks.el  emms-browser.el  emms-cache.el  emms-compat.el  emms-cue.el  emms-default.el  emms-elpa.el  emms-filters.el  emms-gstreamer.el  emms-history.el  emms-i18n.el  emms-idapi-browser.el  emms-idapi-musicbrainz.el  emms-idapi.el  emms-info-exiftool.el  emms-info-flac.el  emms-info-later-do.el  emms-info-libtag.el  emms-info-metaflac.el  emms-info-mp3.el  emms-info-mp3info.el  emms-info-native-flac.el  emms-info-native-mp3.el  emms-info-native-ogg.el  emms-info-native-opus.el  emms-info-native-spc.el  (+79 more)
debian/: changelog  control  copyright  emms-extras.manpages  emms.dirs  emms.emacsen-install  emms.emacsen-remove  emms.emacsen-startup  rules
doc/: .gitignore  Makefile.am  developer-release.txt  emms.texinfo
lisp/: .gitignore  Makefile  Makefile.am  emms-bookmarks.el  emms-browser.el  emms-cache.el  emms-compat.el  emms-cue.el  emms-history.el  emms-i18n.el  emms-info-libtag.el  emms-info-metaflac.el  emms-info-mp3info.el  emms-info-ogg.el  emms-info-ogginfo.el  emms-info-opusinfo.el  emms-info-tinytag.el  emms-info.el  emms-last-played.el  emms-lastfm-client.el  emms-lastfm-scrobbler.el  emms-lastfm.el  emms-librefm-client.el  emms-librefm-scrobbler.el  emms-librefm-stream.el  emms-lyrics.el  emms-mark.el  emms-metaplaylist-mode.el  emms-mode-line-icon.el  emms-mode-line.el  emms-player-mpd.el  emms-player-mpg321-remote.el  emms-player-mplayer.el  emms-player-mpv.el  emms-player-simple.el  emms-player-vlc.el  emms-player-xine.el  emms-playing-time.el  emms-playlist-limit.el  emms-playlist-mode.el  (+18 more)
src/: .gitignore  Makefile.am  emms-print-metadata.c
test/: emms-info-flac-tests.el  (+11 more)
(+3 files in other folders)
